# SubscriptionSage

./: .gitignore  .replit  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CZ.md  CODE_OF_CONDUCT_PL.md  CONTRIBUTING.md  CONTRIBUTING_CZ.md  CONTRIBUTING_PL.md  DEVELOPMENT.md  DEVELOPMENT_CZ.md  DEVELOPMENT_PL.md  DOCKER.md  LICENSE  README.md  README_CZ.md  README_PL.md  STYLE_GUIDE.md  STYLE_GUIDE_CZ.md  STYLE_GUIDE_PL.md  UTILITIES.md  UTILS.md  UTILS_CZ.md  UTILS_PL.md  app.py  docker-compose.yml  fix_logos.py  migrate_add_logo_url.py  models.py  pyproject.toml  requirements.txt  routes.py  scheduler.py  update_favicons.py  update_logos.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
development_docs/backend/: README.md  api.md  components.md  models.md
development_docs/frontend/: README.md  assets.md  templates.md
migrations/versions/: e3943f342941_add_exchange_rate_api_key_to_user_model.py
static/css/: style.css
static/js/: chart-config.js  i18n.js  main.js
static/locales/cs/: translation.json
static/locales/en/: translation.json
static/locales/pl/: translation.json
templates/: 404.html  500.html  add_subscription.html  base.html  dashboard.html  edit_subscription.html  index.html  login.html  register.html  reports.html  settings.html
templates/email/: payment_reminder.html
