[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-mail>=0.10.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.3",
    "apscheduler>=3.11.0",
    "flask-login>=0.6.3",
    "requests>=2.32.3",
    "pillow>=11.2.1",
    "trafilatura>=2.0.0",
]
